--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,4 +16,4 @@ jobs:
       with:
         pypi-token: ${{ secrets.PYPI_API_TOKEN }}
         gh-token: ${{ secrets.GITHUB_TOKEN }}
-        parse-changelog: true
+        parse-changelog: false
